--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -1,7 +1,15 @@
 ---
 title: "DSCI 310: Historical Horse Population in Canada"
 author: "Tiffany Timbers & Jordan Bourak"
-format: html
+format:
+    html:
+        toc: true
+        toc-depth: 2
+    pdf: 
+        toc: true
+        toc-depth: 2
+bibliography: references.bib
+
 editor: source
 ---
 
@@ -11,32 +19,30 @@ from IPython.display import Markdown, display
 from tabulate import tabulate
 ```
 
-Aim
+## Aim
 
 This project explores the historical population of horses in Canada 
 between 1906 and 1972 for each province.
 
-Data
+## Data
 
 Horse population data were sourced from the 
 [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) 
 (Government of Canada, 2017a and Government of Canada, 2017b).
 
-Methods
+## Methods
 
-The Python programming language (Van Rossum and Drake 2009)
+The Python programming language [@Python]
 and the following Python packages were used to perform the analysis: 
-pandas (McKinney 2010), altair (VanderPlas 2018), click (Team 2020), 
+pandas [@pandas], altair (VanderPlas 2018), click (Team 2020), 
 as well as Quarto (Allaire et al. 2022). 
-*Note: this report is adapted from Timbers (2020).* 
+*Note: this report is adapted from @ttimbers-horses Timbers (2020).* 
 
-Results
+## Results
 
-![](../results/horse_pops_plot.png)
+![Horse populations for all provinces in Canada from 1906 - 1972.](../results/horse_pops_plot.png){#fig-horse_pops_plot width = 90%}
 
-Figure 1: Horse populations for all provinces in Canada from 1906 - 1972.
-
-We can see from Figure 1 that Ontario, Saskatchewan and Alberta 
+We can see from @fig-horse_pops_plot that Ontario, Saskatchewan and Alberta 
 have had the highest horse populations in Canada. 
 All provinces have had a decline in horse populations since 1940. 
 This is likely due to the rebound of the Canadian automotive industry 
@@ -69,4 +75,4 @@ Figure 2: Horse populations for the province with the largest standard deviation
 
 In Figure 2 we zoom in and look at the province of ???, which had the largest spread of values in terms of standard deviation.
 
-References
+## References
