--- a/docs/qmd_example.tex
+++ b/docs/qmd_example.tex
@@ -260,8 +260,9 @@ Note that we define standard deviation (of a sample) as
 
 \[s = \sqrt{\frac{\sum_{i=1}^N (x_i - \overline{x})^2}{N-1} }\]
 
-Additionally, note that in Table 1 we consider the sample standard
-deviation of the number of horses during the same time span as Figure 1.
+Additionally, note that in Table~\ref{tbl-horses_sd} we consider the
+sample standard deviation of the number of horses during the same time
+span as Figure 1.
 
 \begin{figure}
 
